[tool.poetry]
name = "pycdp"
version = "0.2.0"
description = "The coolest Python wrapper for CDP there is :)"
authors = ["shner-elmo <770elmo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
